partman (41) UNRELEASED; urgency=low

  * Stephen R. Marenka
    - m68k: make userdevfs support consistent.
  * Joshua Kwan
    - Remove heinous cat abuse in init.d/mount_target.

 -- Stephen R. Marenka <smarenka@debian.org>  Tue, 25 May 2004 15:30:54 -0500

partman (40) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Jordi Mallach
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by George Papamichelakis
    - Finnish (fi.po) by Tapio Lehtonen
    - Italian (it.po) by Stefano Canepa
    - Bøkmal, Norwegian (nb.po) by Knut Yrvin
    - Romanian (ro.po) by Eddy Petrisor

 -- Joey Hess <joeyh@debian.org>  Tue, 25 May 2004 12:29:43 -0300

partman (39) unstable; urgency=low

  * Bastian Blank
    - Fix dependencies.
    - Always strip binaries.
  * Updated translations:
    - Catalan (ca.po) by Jordi Mallach
    - Danish (da.po) by Claus Hindsgaul
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide Egaña
    - Finnish (fi.po) by Tapio Lehtonen
    - Gallegan (gl.po) by Héctor Fernández López
    - Hungarian (hu.po) by VERÓK István
    - Indonesian (id.po) by I Gede Wijaya S
    - Italian (it.po) by Stefano Canepa
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Russian (ru.po) by Yuri Kozlov
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Albanian (sq.po) by Elian Myftiu
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Bastian Blank <waldi@debian.org>  Thu, 20 May 2004 12:04:48 +0200

partman (38) unstable; urgency=low

  * Anton Zinoviev
     - parted_server.c (command_undo): destroy the old disk before
       reopening.  It is possible that this fixes #239300 